--- a/index.html
+++ b/index.html
@@ -1,32 +1,26 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mejora Interfaz</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      padding: 0;
-    }
+<!-- Dentro de <head> -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+  body {
+    font-family: sans-serif;
+    margin: 20px;
+    padding: 0;
+  }
+
+  .container {
+    max-width: 800px;
+    margin: auto;
+  }
+
+  @media (max-width: 600px) {
     .container {
-      max-width: 600px;
-      margin: auto;
       padding: 10px;
-      background-color: #f0f0f0;
     }
-    @media (max-width: 600px) {
-      .container {
-        background-color: #d0d0d0;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Interfaz Mejorada</h1>
-    <p>Esta es una página con diseño responsivo básico.</p>
-  </div>
-</body>
-</html>
+  }
+</style>
+
+<!-- Dentro de <body> -->
+<div class="container">
+  <h1>¡Hola GitHub Flow!</h1>
+  <p>Esta interfaz es ahora responsiva 🎉</p>
+</div>
