--- a/index.html
+++ b/index.html
@@ -3,60 +3,128 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mejora Interfaz</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <title>Mejora Interfaz Responsiva</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f8f9fa;
+    :root {
+      --primary-color: #4361ee;
+      --text-color: #2b2d42;
+      --text-light: #8d99ae;
+      --bg-color: #f8f9fa;
+      --white: #ffffff;
+      --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+      --border-radius: 12px;
+      --transition: all 0.3s ease;
+    }
+
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      line-height: 1.6;
       display: flex;
-      align-items: center;
-      justify-content: center;
+      flex-direction: column;
       min-height: 100vh;
     }
 
     .container {
-      background-color: #ffffff;
-      max-width: 500px;
-      width: 90%;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 2rem 1.5rem;
+    }
+
+    .card {
+      background-color: var(--white);
+      border-radius: var(--border-radius);
+      box-shadow: var(--shadow);
+      padding: 2.5rem;
       text-align: center;
+      transition: var(--transition);
+      margin: 2rem auto;
+      max-width: 600px;
     }
 
     h1 {
-      font-size: 1.8rem;
-      color: #333;
-      margin-bottom: 10px;
+      font-size: clamp(1.5rem, 4vw, 2.2rem);
+      font-weight: 700;
+      margin-bottom: 1rem;
+      color: var(--primary-color);
     }
 
     p {
-      color: #555;
+      font-size: clamp(0.95rem, 2vw, 1.1rem);
+      color: var(--text-light);
+      margin-bottom: 1.5rem;
+    }
+
+    .btn {
+      display: inline-block;
+      background-color: var(--primary-color);
+      color: white;
+      padding: 0.8rem 1.8rem;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: var(--transition);
+      border: none;
+      cursor: pointer;
       font-size: 1rem;
+      margin-top: 1rem;
+    }
+
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Responsive Breakpoints */
+    @media (max-width: 768px) {
+      .card {
+        padding: 1.8rem;
+      }
     }
 
     @media (max-width: 480px) {
       .container {
-        padding: 20px;
+        padding: 1rem;
       }
-
-      h1 {
-        font-size: 1.5rem;
+      
+      .card {
+        padding: 1.5rem;
+        margin: 1rem auto;
       }
+      
+      .btn {
+        padding: 0.7rem 1.5rem;
+        width: 100%;
+      }
+    }
 
-      p {
-        font-size: 0.95rem;
+    /* Dark mode preference */
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg-color: #121212;
+        --text-color: #f8f9fa;
+        --white: #1e1e1e;
+        --text-light: #adb5bd;
       }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Interfaz Mejorada</h1>
-    <p>Esta es una página con diseño responsivo y estilo moderno.</p>
+    <div class="card">
+      <h1>Interfaz Mejorada</h1>
+      <p>Esta es una página con diseño completamente responsivo que se adapta a todos los dispositivos y tamaños de pantalla.</p>
+      <button class="btn">Ver Más</button>
+    </div>
   </div>
 </body>
 </html>
