--- a/index.html
+++ b/index.html
@@ -1,62 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mejora Interfaz</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f8f9fa;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-    }
-
-    .container {
-      background-color: #ffffff;
-      max-width: 500px;
-      width: 90%;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 1.8rem;
-      color: #333;
-      margin-bottom: 10px;
-    }
-
-    p {
-      color: #555;
-      font-size: 1rem;
-    }
-
-    @media (max-width: 480px) {
-      .container {
-        padding: 20px;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      p {
-        font-size: 0.95rem;
-      }
-    }
-  </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sitio Responsivo</title>
+    <style>
+        @media (max-width: 600px) {
+            body { padding: 10px; }
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Interfaz Mejorada</h1>
-    <p>Esta es una página con diseño responsivo y estilo moderno.</p>
-  </div>
+    <h1>Bienvenido</h1>
 </body>
 </html>
